Fix opacity on visible disabled buttons.

--- a/htdocs/storage/themes/birdwatcher/styles/blocks/payment-form.styl
+++ b/htdocs/storage/themes/birdwatcher/styles/blocks/payment-form.styl
@@ -18,4 +18,8 @@
 	&_cost_free &_free {
 		opacity:1;
 	}
+	&_cost_paid &_paid.is-disabled,
+	&_cost_free &_free.is-disabled {
+		opacity:.4;
+	}
 }
